Swapped the hide delete button condition for testing and forgot to undo

--- a/Zybach.Web/src/app/pages/support-ticket-detail/support-ticket-detail.component.html
+++ b/Zybach.Web/src/app/pages/support-ticket-detail/support-ticket-detail.component.html
@@ -140,7 +140,7 @@
                                 <div class="col-2 text-center">
                                     <button class="btn btn-zybach btn-sm"
                                         (click)="launchDeleteModal(deleteCommentModal, ticketComment.SupportTicketCommentID)"
-                                        [hidden]="currentUserIsTicketOwner()">
+                                        [hidden]="!currentUserIsTicketOwner()">
                                     <span class="fa fa-trash"></span>
                                     </button>
                                 </div>
