Laying out WellGroupDetail page; creating a WellGroupSummaryDto with fields for Sensors, BoundingBox, and Water Level tab data. Adding Well lat/lon to WellGroupWellSimpleDto for detail page map. Updating water level chart spec to display a line for each WellRegistrationID present in the chart data; the same spec is now being used for the Well Detail and Well Group Detail Water Level charts. Some API logic updated to handle queries for multiple wells' water level data.

--- a/Zybach.Web/src/app/pages/well-group-list/well-group-list.component.html
+++ b/Zybach.Web/src/app/pages/well-group-list/well-group-list.component.html
@@ -10,10 +10,10 @@
 
     <div class="row mt-2">
         <div class="col-auto ml-auto">
-            <a class="btn btn-primary btn-md mr-3" routerLink="new">New Well Group</a>
+            <a class="btn btn-primary btn-md mr-3" routerLink="new">New Well Group <span class="fas fa-plus"></span></a>
 
             <button class="btn btn-secondary btn-md" style="cursor: pointer;" (click)="exportToCsv()" placement="top"
-            ngbTooltip="Download as CSV"><i class="fas fa-download"></i></button>
+                ngbTooltip="Download as CSV"><i class="fas fa-download"></i></button>
             
             <fresca-clear-grid-filters-button [grid]="wellGroupsGrid"></fresca-clear-grid-filters-button>
         </div>
