Updating ReportTemplateWaterLevelInspectionModel and ReportTemplateGenerator to use Well Group as the primary entity for Water Level Reports; using Primary Well to populate required Well-level data (Owner, etc.). Adding new Water Level Inspections Report page & link in Report nav dropdown.

--- a/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -98,6 +98,9 @@
                     <a routerLink="/reports/well-inspections-report" class="dropdown-item">
                         Well Inspections Report
                     </a>
+                    <a routerLink="/reports/water-levels-report" class="dropdown-item">
+                        Water Levels Report
+                    </a>
                 </div>
             </li>
         </ul>
