--- a/Zybach.Web/src/app/pages/well-water-level-map/well-water-level-map.component.html
+++ b/Zybach.Web/src/app/pages/well-water-level-map/well-water-level-map.component.html
@@ -1,5 +1,5 @@
 <div class="row mb-2">
-    <div class="col-12 col-lg-6">
+    <div class="col">
         <div class="input-group">
             <input type="text" name="mapSearchQuery" class="form-control" placeholder="Search map by address..."
                 [(ngModel)]="mapSearchQuery" (keyup.enter)="mapSearch()" />
@@ -9,5 +9,4 @@
         </div>
     </div>
 </div>
-<div id="{{mapID}}" [style.height]="mapHeight">
-</div>
+<div id="{{mapID}}" [style.height]="mapHeight"></div>
