Adding WellPressureSensorChartData to WellGroupSummaryDto; adding sensor chart to Well Group detail page. Updating Well controller get route to return WellWithSensorSimpleDto rather than WellMinimalDto, and displaying additional columns on Well Group Edit grid. Allowing User to select whether Well Group is part of Water Level Reporting Program, and only triggering PrimaryWell modal if they select Yes; adding a static display of selected Wells below grid.

--- a/Zybach.Web/src/app/pages/well-group-detail/well-group-detail.component.html
+++ b/Zybach.Web/src/app/pages/well-group-detail/well-group-detail.component.html
@@ -53,7 +53,7 @@
                                     </div>
                                 </div>
 
-                                <div class="row mt-2">
+                                <div class="row mt-2" *ngIf="wellGroup.PrimaryWell">
                                     <div class="col-sm-6 label font-weight-bold">Primary Well for Water Level Reporting:</div>
                                     <div class="col-sm-6">
                                         <a routerLink="/wells/{{wellGroup.PrimaryWell.WellID}}">{{ wellGroup.PrimaryWell.WellRegistrationID }}</a>
