--- a/Zybach.Web/src/app/pages/well-group-edit/well-group-edit.component.html
+++ b/Zybach.Web/src/app/pages/well-group-edit/well-group-edit.component.html
@@ -25,16 +25,30 @@
 
         <div class="row mt-2">
             <div class="col-12 control-label mb-2">
-                <label class="required"><strong>Well Group Name:</strong></label>
+                <label class="required"><strong>Well Group Name</strong></label>
             </div>
             <div class="col-md-8">
                 <input type="text" class="form-control" name="wellGroupName" [(ngModel)]="model.WellGroupName" />
             </div>
         </div>
 
+        <div class="row mt-4">
+            <div class="col-12">
+                <label class="required"><strong>Does Well Group participate in Water Level Program?</strong></label>
+            </div>
+            <div class="col-md-8">
+                <label class="ml-2">
+                    <input type="radio" name="hasPrimaryWell" [(ngModel)]="hasPrimaryWell" [value]="true"> Yes
+                </label>
+                  <label class="ml-2">
+                    <input type="radio" name="hasPrimaryWell" [(ngModel)]="hasPrimaryWell" [value]="false"> No
+                </label>
+            </div>
+        </div>
+
         <div class="row mt-4 align-items-center">
             <div class="col-auto control-label">
-                <label class="required"><strong>Select Associated Wells:</strong></label>
+                <label class="required"><strong>Select Associated Wells</strong></label>
             </div>
             <div class="col-auto ml-auto">
                 <fresca-clear-grid-filters-button [grid]="selectWellsGrid"></fresca-clear-grid-filters-button>
@@ -43,16 +57,20 @@
         <div class="row mt-2">
             <div class="col">
                 <ag-grid-angular #selectWellsGrid style="width: 100%; height: 400px;" class="ag-theme-balham"
-                    [rowData]="wells" [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" rowSelection="multiple" [rowMultiSelectWithClick]="true"
-                    (gridReady)="onGridReady()" [suppressMenuHide]="true" [pagination]="true" [paginationPageSize]="100">
+                    [rowData]="wells" [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" rowSelection="multiple" 
+                    [rowMultiSelectWithClick]="true" (gridReady)="onGridReady()" (selectionChanged)="onSelectionChanged()" 
+                    [suppressMenuHide]="true" [pagination]="true" [paginationPageSize]="100">
                 </ag-grid-angular>
             </div>
         </div>
 
         <div class="row">
-            <div class="col mt-4">Selected Wells ({{ model.WellGroupWells.length }}):</div>
-            <div *ngFor="let wellGroupWell of model.WellGroupWells">
-                {{ wellGroupWell?.WellRegistrationID }}
+            <div class="col mt-4">
+                <strong>Selected Wells ({{ model.WellGroupWells.length }}):</strong>
+
+            <span *ngFor="let wellGroupWell of model.WellGroupWells; last as last">
+                {{ wellGroupWell?.WellRegistrationID }}{{ last ? '' : ','}}
+            </span>
             </div>
         </div>
 
