--- a/Zybach.Web/src/app/pages/well-group-water-levels-tab/well-group-water-levels-tab.component.html
+++ b/Zybach.Web/src/app/pages/well-group-water-levels-tab/well-group-water-levels-tab.component.html
@@ -8,8 +8,7 @@
             <div class="card-body">
                 <div class="row">
                     <div class="col">
-                        <div *ngIf="hasWaterLevelChartData; else noWaterLevelSpecDiv" [id]="waterLevelChartID" style="width:100%; min-height: 340px;"><span class="fa fa-spinner loading-spinner"></span> Loading</div>
-                        <ng-template #noWaterLevelSpecDiv><em>No Water Level Chart data to show</em></ng-template>
+                        <zybach-sensor-chart [(sensorChartData)]="wellGroup.WellPressureSensorChartData"></zybach-sensor-chart>
                     </div>
                 </div>
             </div>
@@ -23,6 +22,13 @@
             </div>
 
             <div class="card-body">
+                <div class="row">
+                    <div class="col">
+                        <div *ngIf="hasWaterLevelChartData; else noWaterLevelSpecDiv" [id]="waterLevelChartID" style="width:100%; min-height: 340px;"><span class="fa fa-spinner loading-spinner"></span> Loading</div>
+                        <ng-template #noWaterLevelSpecDiv><em>No Water Level Chart data to show</em></ng-template>
+                    </div>
+                </div>
+
                 <div class="row">
                     <div class="col">
                         <a class="btn btn-zybach btn-md float-right m-2" routerLink="/wells/{{wellGroup.PrimaryWell.WellID}}/new-water-level-inspection"
