Adding null check before trying to close Primary Well modal on well group form success/error; adding a few additional Primary Well null checks. Removing some stray console logs. Setting well detail tabs' destroyOnHide option to false, since it's screwing with the map (not loading when navigating back to first tab from second). Adding loading spinner to well group edit form, since it sometimes takes a sec to load.

--- a/Zybach.Web/src/app/pages/well-group-edit/well-group-edit.component.html
+++ b/Zybach.Web/src/app/pages/well-group-edit/well-group-edit.component.html
@@ -1,4 +1,4 @@
-<nav aria-label="breadcrumb" *ngIf="model">
+<nav aria-label="breadcrumb" *ngIf="model; else loading">
     <ol class="breadcrumb">
         <li class="breadcrumb-item">
             <a routerLink="/well-groups">Well Groups</a>
@@ -11,6 +11,14 @@
         </li>
     </ol>
 </nav>
+
+<ng-template #loading>
+    <div class="row mt-5">
+        <div class="col-auto m-auto">
+            <i class="fa fa-spinner loading-spinner"></i> Loading
+        </div>
+    </div>
+</ng-template>
 
 <div class="container" *ngIf="model">
     <app-alert-display></app-alert-display>
