--- a/Zybach.Web/src/app/pages/well-group-detail/well-group-detail.component.html
+++ b/Zybach.Web/src/app/pages/well-group-detail/well-group-detail.component.html
@@ -10,7 +10,7 @@
 <div class="container">
     <app-alert-display></app-alert-display>
 
-    <nav ngbNav #nav="ngbNav" [destroyOnHide]="true" [animation]="false" (shown)="resizeWindow()" class="nav-tabs nav-fill">
+    <nav ngbNav #nav="ngbNav" [destroyOnHide]="false" [animation]="false" (shown)="resizeWindow()" class="nav-tabs nav-fill">
         <ng-container ngbNavItem>
 
             <a ngbNavLink><h5>Well Overview</h5></a>
@@ -46,10 +46,13 @@
 
                                 <div class="row mt-2">
                                     <div class="col-sm-6 label font-weight-bold">Sensors:</div>
-                                    <div class="col-sm-6">
+                                    <div class="col-sm-6" *ngIf="wellGroup.Sensors?.length > 0">
                                         <div *ngFor="let sensor of wellGroup.Sensors">
                                             <a routerLink="/sensors/{{sensor.SensorID}}">{{ sensor.SensorName }}</a>
                                         </div>
+                                    </div>
+                                    <div class="col-sm-6" *ngIf="wellGroup.Sensors?.length == 0">
+                                        None
                                     </div>
                                 </div>
 
@@ -81,7 +84,7 @@
 
             <a ngbNavLink><h5>Water Levels</h5></a>
 
-            <ng-template ngbNavContent>
+            <ng-template ngbNavContent *ngIf="wellGroup">
                 <zybach-well-group-water-levels-tab [wellGroup]="wellGroup"></zybach-well-group-water-levels-tab>
             </ng-template>
 
