--- a/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -150,6 +150,9 @@
                         <a class="dropdown-item" routerLink="/support-tickets">
                             Support Ticket Management
                         </a>
+                        <a class="dropdown-item" routerLink="/sensor-health-check">
+                            Sensor Health Check
+                        </a>
                     </div>
                 </li>
                 <li class="nav-item dropdown mapItem" routerLinkActive="active" [ngClass]="{'currentPage': isMapCurrentPage()}" *ngIf="!isUnassigned()">
