--- a/Zybach.Web/src/app/pages/sensor-health-check/sensor-health-check.component.html
+++ b/Zybach.Web/src/app/pages/sensor-health-check/sensor-health-check.component.html
@@ -25,47 +25,51 @@
         </div>
     </div>
 
-    <div class="row" *ngIf="lastUpdated">
-        <div class="col-md-8 m-auto">
-            <div class="card mt-3">
-                <div class="card-body text-center">
-                    <ng-container *ngIf="eventMessage; else noDataFound">
-                        <div>
-                            {{ receivedDate >= recentPulseCutoff ? 'R' : 'No r' }}ecent data found for sensor <b>{{ sensorName }}</b>.
-                        </div>
-                        <div class="mt-2">
-                            <i [ngClass]="receivedDate >= recentPulseCutoff ? 'fa fa-check-circle text-success fa-2xl' : 'fa fa-times-circle text-danger'"
-                                style="font-size: 24px;"></i>
-                        </div>
-                        <div class="mt-1">
-                            Most recent sensor message was received on {{ receivedDate | date:"shortDate" }} at {{ receivedDate | date:"shortTime" }}.
-                        </div>
-                    </ng-container>
-
-                    <ng-template #noDataFound>
-                        <div>No data found for sensor <b>{{ sensorName }}</b>.</div>
-                        <div><span class="fa fa-spinner loading-spinner"></span></div>
-                        <div>Checking again in 30 seconds...</div>
-                    </ng-template>
+    <ng-container *ngIf="sensorName">
+        <div class="row">
+            <div class="col-md-8 m-auto">
+                <div class="card mt-3">
+                    <div class="card-body text-center">
+                        <ng-container *ngIf="paigeWirelessPulse$ | async; else noDataFound">
+                            <div>
+                                {{ receivedDate >= recentPulseCutoff ? 'R' : 'No r' }}ecent data found for sensor <b>{{ sensorName }}</b>.
+                            </div>
+                            <div class="mt-2">
+                                <i [ngClass]="receivedDate >= recentPulseCutoff ? 'fa fa-check-circle text-success fa-2xl' : 'fa fa-times-circle text-danger'" style="font-size: 24px;"></i>
+                            </div>
+                            <div class="mt-1">
+                                Most recent sensor message was received on {{ receivedDate | date:"shortDate" }} at {{ receivedDate | date:"shortTime" }}.
+                            </div>
+                        </ng-container>
+    
+                        <ng-template #noDataFound>
+                            <div>No data found for sensor <b>{{ sensorName }}</b>.</div>
+                            <div><span class="fa fa-spinner loading-spinner"></span></div>
+                            <div>Checking again in 30 seconds...</div>
+                        </ng-template>
+                    </div>
                 </div>
-            </div>
-            <div class="text-right"><i>Last refreshed at {{ lastUpdated | date:"mediumTime"}}</i></div>
-        </div>
-    </div>
-
-    <div class="row mt-3" *ngIf="eventMessage">
-        <div class="col-md-8 m-auto"><h3>Most Recent Message Details</h3></div>
-        
-        <div class="col-md-8 m-auto">
-            <div class="card">
-                <div class="card-body">
-                    <code>
-                        <pre>{{ eventMessage | json }}</pre>
-                    </code>
-                </div>
+                <div class="text-right"><i>Last refreshed at {{ lastUpdated | date:"mediumTime"}}</i></div>
             </div>
         </div>
-    </div>
+    
+        <div class="row mt-3" *ngIf="eventMessage">
+            <div class="col-md-8 m-auto">
+                <h3>Most Recent Message Details</h3>
+                <p>Received {{ receivedDate | date:"short" }}</p>
+            </div>
+            
+            <div class="col-md-8 m-auto">
+                <div class="card">
+                    <div class="card-body">
+                        <code>
+                            <pre>{{ eventMessage | json }}</pre>
+                        </code>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </ng-container>
 </div>
 
 
