Adding a live timer to countdown between API calls when no data is found; utilizing a private observable with the countdown logic, a subscriber, and a public observable mapping subscriber events to the countdown observable. This enables us to reset the timer be calling subscriber.next() when the API call is refreshed. Making sensor health page available to unauthenticated users.

--- a/Zybach.Web/src/app/pages/sensor-health-check/sensor-health-check.component.html
+++ b/Zybach.Web/src/app/pages/sensor-health-check/sensor-health-check.component.html
@@ -44,8 +44,10 @@
     
                         <ng-template #noDataFound>
                             <div>No data found for sensor <b>{{ sensorName }}</b>.</div>
-                            <div><span class="fa fa-spinner loading-spinner"></span></div>
-                            <div>Checking again in 30 seconds...</div>
+                            <div class="my-2"><span class="fa fa-spinner loading-spinner"></span></div>
+                            <div>
+                                Checking again in {{ countdownTimer$ | async }} seconds...
+                            </div>
                         </ng-template>
                     </div>
                 </div>
