--- a/Zybach.Web/src/app/pages/sensor-status/sensor-status.component.html
+++ b/Zybach.Web/src/app/pages/sensor-status/sensor-status.component.html
@@ -1,5 +1,5 @@
 <div class="container" *ngIf="!wellsGeoJson">
-    <div class="row">
+    <div class="row mt-5">
         <div class="col text-center">
             <span class="fas fa-spinner loading-spinner"></span>
             <p>Loading...</p>
@@ -21,13 +21,14 @@
             </p>
         </div>
         <div class="col-auto">
-            <button class="btn btn-secondary btn-md float-right mr-3" style="cursor: pointer;" (click)="downloadCsv()" placement="top"
-            ngbTooltip="Download as CSV"><i class="fas fa-download"></i></button>
-            <fresca-clear-grid-filters-button class="mr-3 float-right" [grid]="wellsGrid">
-            </fresca-clear-grid-filters-button>
+            <button class="btn btn-secondary btn-md float-right mr-3" style="cursor: pointer;" (click)="downloadCsv()" placement="top" ngbTooltip="Download as CSV">
+                <i class="fas fa-download"></i>
+             </button>
+            <fresca-clear-grid-filters-button class="mr-3 float-right" [grid]="wellsGrid"></fresca-clear-grid-filters-button>
         </div>
     </div>
     <ag-grid-angular #wellsGrid style="width: 100%; height: 400px;" class="ag-theme-balham mt-2" headerHeight="70"
-        [rowData]="redSensors" [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" [rowSelection]="'multiple'" (selectionChanged)="onSelectionChanged($event)">
+        [rowData]="redSensors" [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" 
+        [rowSelection]="'multiple'" (selectionChanged)="onSelectionChanged($event)">
     </ag-grid-angular>
 </div>
