Updating Sensor List, Well Detail, and Sensor Detail pages to read their message age values from the PaigeWirelessPulse table, rather than an Influx query. Updating the Reading Date field definiton types' display names to Measurement Date.

--- a/Zybach.Web/src/app/pages/sensor-detail/sensor-detail.component.html
+++ b/Zybach.Web/src/app/pages/sensor-detail/sensor-detail.component.html
@@ -38,7 +38,11 @@
                                     <field-definition [fieldDefinitionType]="'SensorLastMessageAgeHours'">
                                     </field-definition>:
                                 </strong></div>
-                                <div class="col-12 col-sm-6 mt-1 text-left">{{sensor.MessageAge}}</div>
+                                <div class="col-12 col-sm-6 mt-1 text-left">
+                                    <span *ngIf="sensor.MessageAge != null; else notApplicable">
+                                        {{ math.floor(sensor.MessageAge / 60) }} hours {{ sensor.MessageAge % 60}} mins
+                                    </span>
+                                </div>
                                 <div class="col-12 col-sm-6 mt-1 label"><strong>
                                     <field-definition [fieldDefinitionType]="'SensorLastVoltageReading'">
                                     </field-definition>:
