--- a/Zybach.Web/src/app/shared/components/well-water-data-tab/well-water-data-tab.component.html
+++ b/Zybach.Web/src/app/shared/components/well-water-data-tab/well-water-data-tab.component.html
@@ -45,7 +45,7 @@
                         <tr>
                             <th>Sensor Name</th>
                             <th>Sensor Type</th>
-                            <th>Last Message Age (Hours)</th>
+                            <th>Last Message Age</th>
                             <th>Status</th>
                         </tr>
                     </thead>
@@ -53,7 +53,8 @@
                         <tr *ngFor="let sensor of sensorsWithStatus">
                             <td><a routerLink="/sensors/{{sensor.SensorID}}">{{sensor.SensorName}}</a></td>
                             <td>{{sensor.SensorTypeName}}</td>
-                            <td>{{sensor.MessageAge}}</td>
+                            <td *ngIf="sensor.MessageAge != null">{{ math.floor(sensor.MessageAge / 60) }} hours {{ sensor.MessageAge % 60 }} mins</td>
+                            <td *ngIf="sensor.MessageAge == null">N/A</td>
                             <td>{{sensor.IsActive ? 'Enabled' : 'Disabled'}}</td>
                         </tr>
                     </tbody>
