--- a/Zybach.Web/src/app/pages/sensor-status-map-popup/sensor-status-map-popup.component.html
+++ b/Zybach.Web/src/app/pages/sensor-status-map-popup/sensor-status-map-popup.component.html
@@ -9,7 +9,7 @@
     <label class="rowHeader">{{ sensor.SensorTypeName }} {{ sensor.SensorName ? '(' + sensor.SensorName + ')' : '' }}</label><br />
     
     <label class="rowHeader">Last Message Age:</label>
-    <span *ngIf="sensor.MessageAge != null; else notAvailable">{{ math.floor(sensor.MessageAge / 60) }} hr {{ sensor.MessageAge % 60 }} min</span><br />
+    <span *ngIf="sensor.MessageAge != null; else notAvailable">{{ math.floor(sensor.MessageAge / 60) }} hours {{ sensor.MessageAge % 60 }} mins</span><br />
     
     <label class="rowHeader">Last Voltage Reading:</label> 
     <span *ngIf="sensor.LastVoltageReading != null; else notAvailable">{{ sensor.LastVoltageReading | number:"1.0-0" }} mV</span>
