ZYB-310 Increase Character Limit on Site Number Field * adjust the mask to be up to 100 characters (match the db field)

--- a/Zybach.Web/src/app/pages/well-participation-edit/well-participation-edit.component.html
+++ b/Zybach.Web/src/app/pages/well-participation-edit/well-participation-edit.component.html
@@ -132,7 +132,7 @@
                                         <label><strong>Site Number: </strong></label>
                                     </div>
                                     <div class="col-6 text-left mb-2">
-                                        <input type="text" class="form-control" name="SiteNumber" mask="0000000000"
+                                        <input type="text" class="form-control" name="SiteNumber" mask="0{100}"
                                         [(ngModel)]="wellParticipationInfo.SiteNumber" placeholder="Site Number" />
                                     </div>
 
