--- a/Zybach.Web/src/app/pages/well-group-list/well-group-list.component.html
+++ b/Zybach.Web/src/app/pages/well-group-list/well-group-list.component.html
@@ -10,12 +10,12 @@
 
     <div class="row mt-2">
         <div class="col-auto ml-auto">
-            <a class="btn btn-primary btn-md mr-3" routerLink="new">New Well Group <span class="fas fa-plus"></span></a>
+            <fresca-clear-grid-filters-button [grid]="wellGroupsGrid" class="mr-2"></fresca-clear-grid-filters-button>
 
-            <button class="btn btn-secondary btn-md" style="cursor: pointer;" (click)="exportToCsv()" placement="top"
+            <button class="btn btn-secondary btn-md mr-2" style="cursor: pointer;" (click)="exportToCsv()" placement="top"
                 ngbTooltip="Download as CSV"><i class="fas fa-download"></i></button>
             
-            <fresca-clear-grid-filters-button [grid]="wellGroupsGrid"></fresca-clear-grid-filters-button>
+            <a class="btn btn-primary btn-md" routerLink="new">New Well Group <span class="fas fa-plus"></span></a>
         </div>
     </div>
 
