Removing guards from API routes that need to be accessible to users who aren't logged in for the Water Level Explorer page. Hiding the explorer map search bar for now, until I have more time to figure out why it's not working as expected. Deleting commented out code & removing unused imports.

--- a/Zybach.Web/src/app/pages/water-level-explorer/water-level-explorer.component.html
+++ b/Zybach.Web/src/app/pages/water-level-explorer/water-level-explorer.component.html
@@ -84,8 +84,7 @@
 <ng-template #noWellSelected>
     <div class="card-body">
         <p>
-            Click on a well on the map to view water level information, or use the search box
-            to locate the closest well to a certain location.
+            Click on a well on the map to view water level information.
         </p>
     </div>
 </ng-template>
