--- a/Zybach.Web/src/app/pages/well-water-level-map/well-water-level-map.component.html
+++ b/Zybach.Web/src/app/pages/well-water-level-map/well-water-level-map.component.html
@@ -1,4 +1,4 @@
-<div class="row mb-2">
+<!-- <div class="row mb-2">
     <div class="col">
         <div class="input-group">
             <input type="text" name="mapSearchQuery" class="form-control" placeholder="Search map by address..."
@@ -8,5 +8,5 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 <div id="{{mapID}}" [style.height]="mapHeight"></div>
