made the AgHubWellsFetchDailyJob only retrieve pumping volume data for the lasr 30 days added a sync aghub data button on well page to retrieve all pumped volume since 1/1/2016

--- a/Zybach.Web/src/app/shared/components/well-water-data-tab/well-water-data-tab.component.html
+++ b/Zybach.Web/src/app/shared/components/well-water-data-tab/well-water-data-tab.component.html
@@ -11,6 +11,9 @@
                       <input type="radio" name="units" id="in" (click)="toggleUnitsShown('in')" [disabled]="!displayIrrigatedAcres()"> Depth&nbsp;(in)
                     </label>
                 </div>
+                <div class="float-right mr-2" *ngIf="well.InAgHub">
+                    <button class="btn btn-sm btn-zybach" (click)="syncWithAgHub()">Sync with AgHub</button>
+                </div>
             </div>
             <div class="card-body text-center">
                 <table class="table table-striped">
