--- a/Zybach.Web/src/app/pages/water-level-explorer/water-level-explorer.component.html
+++ b/Zybach.Web/src/app/pages/water-level-explorer/water-level-explorer.component.html
@@ -45,7 +45,7 @@
 
                     <nav ngbNav #nav="ngbNav" [destroyOnHide]="false" [animation]="false" (shown)="updateChart($event)" class="nav-tabs nav-fill">
                         <ng-container ngbNavItem>
-                            <a ngbNavLink><h5>Daily Sensor Measurements</h5></a>
+                            <a ngbNavLink><h5>Daily Measurements</h5></a>
                             <ng-template ngbNavContent id="sensorChartTab">
                                 <div>
                                     <zybach-sensor-chart [(sensorChartData)]="sensorChartData"></zybach-sensor-chart>
@@ -58,10 +58,40 @@
                         <ng-container ngbNavItem>
                             <a ngbNavLink><h5>Spring/Fall Measurements</h5></a>
                             <ng-template ngbNavContent #waterLevelInspectionTab>
+                                <div class="row mb-2">
+                                    <div class="col-auto">
+                                        <button (click)="setFullRange($event)" class="btn btn-zybach">Full Range</button>
+                                    </div>
+                                    <div class="col-auto ml-auto">
+                                        <a class="btn btn btn-zybach float-right" (click)="exportWaterLevelInspectionChartData()"><span class="fas fa-download"></span> Download CSV</a>
+                                    </div>
+                                </div>
+                                <div class="row mb-3">
+                                    <div class="input-group col-6">
+                                      <span class="font-weight-bold mt-1 mx-2">Start Date:</span>
+                                      <div class="input-group">
+                                        <input class="form-control" name="d1" ngbDatepicker #d1="ngbDatepicker" placeholder="yyyy-mm-dd"
+                                          (ngModelChange)="onStartDateChanged($event)" [(ngModel)]="startDate" />
+                                        <div class="input-group-append">
+                                          <button class="btn btn-zybach far fa-calendar input-group-append" (click)="d1.toggle()"
+                                            type="button"></button>
+                                        </div>
+                                      </div>
+                                    </div>
+                                    <div class="input-group col-6">
+                                      <span class="font-weight-bold mt-1 mx-2">End Date:</span>
+                                      <div class="input-group">
+                                        <input class="form-control" name="d2" ngbDatepicker #d2="ngbDatepicker" placeholder="yyyy-mm-dd"
+                                          (ngModelChange)="onEndDateChanged($event)" [(ngModel)]="endDate" />
+                                        <div class="input-group-append">
+                                          <button class="btn btn-zybach far fa-calendar input-group-append" (click)="d2.toggle()"
+                                            type="button"></button>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
 
-                                <a class="btn btn btn-zybach float-right" (click)="exportWaterLevelInspectionChartData()"><span class="fas fa-download"></span> Download CSV</a>
-
-                                <div *ngIf="hasWaterLevelInspectionChartData; else noWaterLevelSpecDiv" [id]="waterLevelInspectionChartID" style="width:100%; min-height: 340px;">
+                                <div *ngIf="hasWaterLevelInspectionChartData; else noWaterLevelSpecDiv" [id]="waterLevelInspectionChartID" style="width:100%; height: 340px;">
                                     <span class="fa fa-spinner loading-spinner"></span> Loading
                                 </div>
                                 <ng-template #noWaterLevelSpecDiv><em>No Water Level Chart data to show</em></ng-template>
