Updating sensor status wording

--- a/Zybach.Web/src/app/pages/sensor-health-check/sensor-health-check.component.html
+++ b/Zybach.Web/src/app/pages/sensor-health-check/sensor-health-check.component.html
@@ -41,7 +41,7 @@
                             <div class="mt-1">
                                 The most recent message was received {{ receivedDate | timeago }}
                                 <span *ngIf="hasContinuityReading()">
-                                    <br> and reported the sensor was <b>{{ sensorOn ? "on" : "off" }}</b>
+                                    <br> and reported the pump was <b>{{ sensorOn ? "on" : "off" }}</b>
                                 </span>.
                             </div>
                         </ng-container>
