create new view vSensor that does all the last reading dates, last voltage readings, message ages etc retrofitted existing pages to use that instead of having that code all over the place deleted WellWithSensorMessageAge and made it use WellWithSimple instead deleted SensorMessageAge and made it use SensorSimple

--- a/Zybach.Web/src/app/pages/sensor-detail/sensor-detail.component.html
+++ b/Zybach.Web/src/app/pages/sensor-detail/sensor-detail.component.html
@@ -39,8 +39,8 @@
                                     </field-definition>:
                                 </strong></div>
                                 <div class="col-12 col-sm-6 mt-1 text-left">
-                                    <span *ngIf="sensor.MessageAge != null; else notApplicable">
-                                        {{ math.floor(sensor.MessageAge / 60) }} hours {{ sensor.MessageAge % 60}} mins
+                                    <span *ngIf="sensor.LastMessageAgeInHours != null; else notApplicable">
+                                        {{ sensor.LastMessageAgeInHours }}
                                     </span>
                                 </div>
                                 <div class="col-12 col-sm-6 mt-1 label"><strong>
