--- a/Zybach.Web/src/app/pages/openet-sync-water-year-month-status-list/openet-sync-water-year-month-status-list.component.html
+++ b/Zybach.Web/src/app/pages/openet-sync-water-year-month-status-list/openet-sync-water-year-month-status-list.component.html
@@ -11,11 +11,10 @@
 <div class="container mt-sm-4">
     <ng-container *ngIf="!loadingPage; else loadingBlock">
         <app-alert-display></app-alert-display>
-        <ngb-alert *ngIf="numSyncsInProgress() > 0" [type]="'info'" [dismissible]="false">
-                Sync operations are currently in progress to update the following {{ numSyncsInProgress == 1 ? "date" : "dates" }}: {{ getInProgressDates()
-                }}.<br />
-                Syncing and finalizing any of the dates involved in these operations will be disabled until the
-                respective operation completes.
+        <ngb-alert *ngIf="syncsInProgress > 0" type="info" [dismissible]="false">
+                Sync operations are currently in progress to update the following {{ syncsInProgress == 1 ? "date" : "dates" }}: {{ getInProgressDates()}}.
+                <br />
+                Syncing and finalizing any of the dates involved in these operations will be disabled until the respective operation completes.
         </ngb-alert>
         <ngb-alert *ngIf="!openETSyncEnabled()" [type]="'info'" [dismissible]="false">
             Currently, syncing with OpenET is not enabled. This feature will be enabled in the future.
@@ -44,28 +43,30 @@
                             <table class="table table-striped table-condensed" style="table-layout:fixed">
                                 <thead>
                                     <tr>
-                                        <th style="width: 10%">Year</th>
-                                        <th style="width: 10%">Month</th>
-                                        <th style="width: 50%">Last Updated</th>
+                                        <th style="width: 10%">Actions</th>
+                                        <th style="width: 7%">Year</th>
+                                        <th style="width: 6%">Month</th>
+                                        <th style="width: 10%">OpenET Variable</th>
+                                        <th style="width: 10%">Last Updated</th>
                                         <th style="width: 10%">Finalized Date</th>
-                                        <th style="width: 20%">Actions</th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr *ngFor="let waterYearMonth of waterYearMonthDtos">
-                                        <td class="align-middle">{{waterYearMonth.Year}}</td>
-                                        <td class="align-middle">{{waterYearMonth.Month}}</td>
-                                        <td class="align-middle">{{getDataUpdateStatusForWaterYearMonth(waterYearMonth)}}</td>
-                                        <td class="align-middle">{{waterYearMonth.FinalizeDate | date:dateFormatString}}</td>
+                                    <tr *ngFor="let openETSync of openETSyncs">
                                         <td class="align-middle">
-                                                <button class="btn btn-zybach mr-2"
-                                                    (click)="setSelectedWaterYearMonthAndLaunchModal(syncWaterYearMonthModalContent, waterYearMonth)"
-                                                    [disabled]="!openETSyncEnabled() || !isOpenETAPIKeyValid || !isCurrentUserAdministrator() || (waterYearMonth.FinalizeDate !== null && waterYearMonth.FinalizeDate !== undefined) || syncInProgressForWaterYearMonth(waterYearMonth.WaterYearMonthID)">Sync
-                                                    Now</button>
-                                                <button class="btn btn-zybach"
-                                                    (click)="setSelectedWaterYearMonthAndLaunchModal(finalizeWaterYearMonthModalContent, waterYearMonth)"
-                                                    [disabled]="!isCurrentUserAdministrator() || (waterYearMonth.FinalizeDate !== null && waterYearMonth.FinalizeDate !== undefined) || syncInProgressForWaterYearMonth(waterYearMonth.WaterYearMonthID)">Finalize</button>
+                                            <button class="btn btn-zybach mr-3"
+                                                (click)="setSelectedOpenETSyncAndLaunchModal(syncOpenETSyncModalContent, openETSync)"
+                                                [disabled]="!openETSyncEnabled() || !isCurrentUserAdministrator() || (openETSync.FinalizeDate !== null && openETSync.FinalizeDate !== undefined) || syncInProgressForOpenETSync(openETSync.OpenETSyncID)">
+                                                Sync</button>
+                                            <button class="btn btn-zybach"
+                                                (click)="setSelectedOpenETSyncAndLaunchModal(finalizeOpenETSyncModalContent, openETSync)"
+                                                [disabled]="!isCurrentUserAdministrator() || (openETSync.FinalizeDate !== null && openETSync.FinalizeDate !== undefined) || syncInProgressForOpenETSync(openETSync.OpenETSyncID)">Finalize</button>
                                         </td>
+                                        <td class="align-middle">{{openETSync.Year}}</td>
+                                        <td class="align-middle">{{openETSync.Month}}</td>
+                                        <td class="align-middle">{{openETSync.OpenETDataType.OpenETDataTypeName}}</td>
+                                        <td class="align-middle">{{openETSync.LastUpdateDate}}</td>
+                                        <td class="align-middle">{{openETSync.FinalizeDate | date:dateFormatString}}</td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -86,45 +87,45 @@
     <i class="fa fa-spinner loading-spinner"></i> Loading
 </ng-template>
 
-<ng-template #finalizeWaterYearMonthModalContent let-modal>
+<ng-template #finalizeOpenETSyncModalContent let-modal>
     <div class="modal-header">
-        <h5 class="modal-title" id="finalizeWaterYearMonthModalTitle">Finalize Water Year and Month Data</h5>
+        <h5 class="modal-title" id="finalizeOpenETSyncModalTitle">Finalize Water Year and Month Data</h5>
         <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
     <div class="modal-body">
         <p>
-            Are you sure you want to finalize the OpenET data for {{selectedWaterYearMonthName}} {{selectedWaterYearMonth.Year}}? The system will no longer
-            update Evapotranspiration data for {{selectedWaterYearMonthName}} {{selectedWaterYearMonth.Year}} and will not accept any new override
+            Are you sure you want to finalize the OpenET data for {{selectedOpenETSyncName}} {{selectedOpenETSync.Year}}? The system will no longer
+            update Evapotranspiration data for {{selectedOpenETSyncName}} {{selectedOpenETSync.Year}} and will not accept any new override
             submissions.
         </p>
         <div class="modal-footer">
-            <button type="button" class="btn btn-zybach btn-md" ngbAutoFocus (click)="finalizeWaterYearMonth()">
+            <button type="button" class="btn btn-zybach btn-md" ngbAutoFocus (click)="finalizeOpenETSync()">
                 Finalize</button>
             <button type="button" class="btn btn-secondary btn-md"
-                (click)="resetWaterYearMonthToFinalizeAndCloseModal(modal)">Cancel</button>
+                (click)="resetOpenETSyncToFinalizeAndCloseModal(modal)">Cancel</button>
         </div>
     </div>
 </ng-template>
 
-<ng-template #syncWaterYearMonthModalContent let-modal>
+<ng-template #syncOpenETSyncModalContent let-modal>
     <div class="modal-header">
-        <h5 class="modal-title" id="syncWaterYearMonthModalTitle">Sync Water Year and Month Data</h5>
+        <h5 class="modal-title" id="syncOpenETSyncModalTitle">Sync Water Year and Month Data</h5>
         <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
     <div class="modal-body">
         <p>
-            Are you sure you want to sync the OpenET data for {{selectedWaterYearMonthName}} {{selectedWaterYearMonth.Year}}? This will refresh OpenET Data
+            Are you sure you want to sync the OpenET data for {{selectedOpenETSyncName}} {{selectedOpenETSync.Year}}? This will refresh OpenET Data
             for all applicable parcels, but will not reset any user-input overrides.
         </p>
         <div class="modal-footer">
-            <button type="button" class="btn btn-zybach btn-md" ngbAutoFocus (click)="syncWaterYearMonth()">
+            <button type="button" class="btn btn-zybach btn-md" ngbAutoFocus (click)="syncOpenETSync()">
                 Sync</button>
             <button type="button" class="btn btn-secondary btn-md"
-                (click)="resetWaterYearMonthToFinalizeAndCloseModal(modal)">Cancel</button>
+                (click)="resetOpenETSyncToFinalizeAndCloseModal(modal)">Cancel</button>
         </div>
     </div>
 </ng-template>
